commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45395,6 +45395,10 @@
     {
       "Date": "2022-11-18 00:00",
       "Rate": "19.4285"
+    },
+    {
+      "Date": "2022-11-18 01:00",
+      "Rate": "19.4653"
     }
   ]
 }
