commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45399,6 +45399,10 @@
     {
       "Date": "2022-11-18 01:00",
       "Rate": "19.4653"
+    },
+    {
+      "Date": "2022-11-18 02:00",
+      "Rate": "19.4589"
     }
   ]
 }
