commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45403,6 +45403,10 @@
     {
       "Date": "2022-11-18 02:00",
       "Rate": "19.4589"
+    },
+    {
+      "Date": "2022-11-18 03:00",
+      "Rate": "19.4534"
     }
   ]
 }
