commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45407,6 +45407,10 @@
     {
       "Date": "2022-11-18 03:00",
       "Rate": "19.4534"
+    },
+    {
+      "Date": "2022-11-18 04:00",
+      "Rate": "19.4615"
     }
   ]
 }
