commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45411,6 +45411,10 @@
     {
       "Date": "2022-11-18 04:00",
       "Rate": "19.4615"
+    },
+    {
+      "Date": "2022-11-18 05:00",
+      "Rate": "19.4595"
     }
   ]
 }
