commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.7669725,
-  "buy": 19.012,
-  "date": "2022-11-17 17:40:11",
-  "prev_buy": 19.647925,
-  "prev_sell": 18.9091
+  "sell": 19.794445,
+  "buy": 19.0561,
+  "date": "2022-11-18 09:40:10",
+  "prev_buy": 19.8137775,
+  "prev_sell": 19.07374
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.6698375,
-  "buy": 19.109,
-  "date": "2022-11-17 17:40:13",
-  "prev_buy": 19.551375,
-  "prev_sell": 19.005575
+  "sell": 19.697175,
+  "buy": 19.153325,
+  "date": "2022-11-18 09:40:12",
+  "prev_buy": 19.7164125,
+  "prev_sell": 19.171055
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.81554,
-  "buy": 19.012,
-  "date": "2022-11-17 17:40:15",
-  "prev_buy": 19.6962,
-  "prev_sell": 18.9091
+  "sell": 19.84308,
+  "buy": 19.0561,
+  "date": "2022-11-18 09:40:14",
+  "prev_buy": 19.86246,
+  "prev_sell": 19.07374
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-18 09:20:15",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-18 09:30:26",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9709,
-  "buy": 18.9604,
-  "date": "2022-11-18 09:00:17",
-  "prev_buy": 19.839,
-  "prev_sell": 18.824
+  "sell": 19.9429,
+  "buy": 18.9324,
+  "date": "2022-11-18 09:40:16",
+  "prev_buy": 19.93,
+  "prev_sell": 18.914
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.737832,
-  "buy": 18.9053,
-  "date": "2022-11-17 17:40:21",
-  "prev_buy": 19.61896,
-  "prev_sell": 18.8029775
+  "sell": 19.765264,
+  "buy": 18.9491525,
+  "date": "2022-11-18 09:40:20",
+  "prev_buy": 19.784568,
+  "prev_sell": 18.9666935
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.776686,
-  "buy": 18.9441,
-  "date": "2022-11-17 17:40:22",
-  "prev_buy": 19.65758,
-  "prev_sell": 18.8415675
+  "sell": 19.804172,
+  "buy": 18.9880425,
+  "date": "2022-11-18 09:40:21",
+  "prev_buy": 19.823514,
+  "prev_sell": 19.0056195
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7863995,
-  "buy": 18.7695,
-  "date": "2022-11-17 17:40:22",
-  "prev_buy": 19.667235,
-  "prev_sell": 18.6679125
+  "sell": 19.813899,
+  "buy": 18.8130375,
+  "date": "2022-11-18 09:40:22",
+  "prev_buy": 19.8332505,
+  "prev_sell": 18.8304525
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7456028,
-  "buy": 18.96544,
-  "date": "2022-11-17 17:40:23",
-  "prev_buy": 19.626684,
-  "prev_sell": 18.862792
+  "sell": 19.7730456,
+  "buy": 19.009432,
+  "date": "2022-11-18 09:40:22",
+  "prev_buy": 19.7923572,
+  "prev_sell": 19.0270288
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.660124,
-  "buy": 18.7792,
-  "date": "2022-11-17 17:40:23",
-  "prev_buy": 19.54172,
-  "prev_sell": 18.67756
+  "sell": 19.687448,
+  "buy": 18.82276,
+  "date": "2022-11-18 09:40:23",
+  "prev_buy": 19.706676,
+  "prev_sell": 18.840184
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.834967,
-  "buy": 18.5658,
-  "date": "2022-11-17 17:40:24",
-  "prev_buy": 19.71551,
-  "prev_sell": 18.465315
+  "sell": 19.862534,
+  "buy": 18.608865,
+  "date": "2022-11-18 09:40:23",
+  "prev_buy": 19.881933,
+  "prev_sell": 18.626091
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.796113,
-  "buy": 18.9926,
-  "date": "2022-11-17 17:40:24",
-  "prev_buy": 19.67689,
-  "prev_sell": 18.889805
+  "sell": 19.823626,
+  "buy": 19.036655,
+  "date": "2022-11-18 09:40:24",
+  "prev_buy": 19.842987,
+  "prev_sell": 19.054277
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.912675,
-  "buy": 18.624,
-  "date": "2022-11-17 17:40:25",
-  "prev_buy": 19.79275,
-  "prev_sell": 18.5232
+  "sell": 19.94035,
+  "buy": 18.6672,
+  "date": "2022-11-18 09:40:24",
+  "prev_buy": 19.959825,
+  "prev_sell": 18.68448
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.88256315,
-  "buy": 18.9441,
-  "date": "2022-11-17 17:40:25",
-  "prev_buy": 19.7628195,
-  "prev_sell": 18.8415675
+  "sell": 19.9101963,
+  "buy": 18.9880425,
+  "date": "2022-11-18 09:40:24",
+  "prev_buy": 19.92964185,
+  "prev_sell": 19.0056195
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.8641075,
-  "buy": 18.9635,
-  "date": "2022-11-17 17:40:26",
-  "prev_buy": 19.744475,
-  "prev_sell": 18.8608625
+  "sell": 19.891715,
+  "buy": 19.0074875,
+  "date": "2022-11-18 09:40:25",
+  "prev_buy": 19.9111425,
+  "prev_sell": 19.0250825
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.8641075,
-  "buy": 18.9538,
-  "date": "2022-11-17 17:40:27",
-  "prev_buy": 19.744475,
-  "prev_sell": 18.851215
+  "sell": 19.891715,
+  "buy": 18.997765,
+  "date": "2022-11-18 09:40:26",
+  "prev_buy": 19.9111425,
+  "prev_sell": 19.015351
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
