--- a/indexRt.html
+++ b/indexRt.html
@@ -45415,6 +45415,10 @@
     {
       "Date": "2022-11-18 05:00",
       "Rate": "19.4595"
+    },
+    {
+      "Date": "2022-11-18 06:00",
+      "Rate": "19.4422"
     }
   ]
 }
