commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45419,6 +45419,10 @@
     {
       "Date": "2022-11-18 06:00",
       "Rate": "19.4422"
+    },
+    {
+      "Date": "2022-11-18 07:00",
+      "Rate": "19.4840"
     }
   ]
 }
