commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45423,6 +45423,10 @@
     {
       "Date": "2022-11-18 07:00",
       "Rate": "19.4840"
+    },
+    {
+      "Date": "2022-11-18 08:00",
+      "Rate": "19.4817"
     }
   ]
 }
