commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.81021625,
-  "buy": 19.077268,
-  "date": "2022-11-18 12:40:10",
-  "prev_buy": 19.80390775,
-  "prev_sell": 19.072858
+  "sell": 19.82527525,
+  "buy": 19.093046,
+  "date": "2022-11-18 12:50:10",
+  "prev_buy": 19.8011605,
+  "prev_sell": 19.069722
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.71509625,
-  "buy": 19.17795,
-  "date": "2022-11-18 12:40:13",
-  "prev_buy": 19.7079075,
-  "prev_sell": 19.170661
+  "sell": 19.72785375,
+  "buy": 19.1904595,
+  "date": "2022-11-18 12:50:13",
+  "prev_buy": 19.7038575,
+  "prev_sell": 19.1670165
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.861134,
-  "buy": 19.0806,
-  "date": "2022-11-18 12:40:15",
-  "prev_buy": 19.853892,
-  "prev_sell": 19.073348
+  "sell": 19.87674,
+  "buy": 19.095496,
+  "date": "2022-11-18 12:50:15",
+  "prev_buy": 19.849812,
+  "prev_sell": 19.069722
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9883,
-  "buy": 18.9778,
-  "date": "2022-11-18 12:40:17",
-  "prev_buy": 19.9538,
-  "prev_sell": 18.9433
+  "sell": 19.9968,
+  "buy": 18.9863,
+  "date": "2022-11-18 12:50:17",
+  "prev_buy": 19.9573,
+  "prev_sell": 18.9468
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.7832472,
-  "buy": 18.973515,
-  "date": "2022-11-18 12:40:26",
-  "prev_buy": 19.7760336,
-  "prev_sell": 18.9663037
+  "sell": 19.798792,
+  "buy": 18.9883274,
+  "date": "2022-11-18 12:50:21",
+  "prev_buy": 19.7719696,
+  "prev_sell": 18.96269805
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.8221906,
-  "buy": 19.012455,
-  "date": "2022-11-18 12:40:27",
-  "prev_buy": 19.8149628,
-  "prev_sell": 19.0052289
+  "sell": 19.837766,
+  "buy": 19.0272978,
+  "date": "2022-11-18 12:50:22",
+  "prev_buy": 19.8108908,
+  "prev_sell": 19.00161585
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.83192645,
-  "buy": 18.837225,
-  "date": "2022-11-18 12:40:27",
-  "prev_buy": 19.8246951,
-  "prev_sell": 18.8300655
+  "sell": 19.8475095,
+  "buy": 18.851931,
+  "date": "2022-11-18 12:50:23",
+  "prev_buy": 19.8206211,
+  "prev_sell": 18.82648575
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.79103588,
-  "buy": 19.033872,
-  "date": "2022-11-18 12:40:27",
-  "prev_buy": 19.78381944,
-  "prev_sell": 19.02663776
+  "sell": 19.8065868,
+  "buy": 19.04873152,
+  "date": "2022-11-18 12:50:23",
+  "prev_buy": 19.77975384,
+  "prev_sell": 19.02302064
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.7053604,
-  "buy": 18.84696,
-  "date": "2022-11-18 12:40:28",
-  "prev_buy": 19.6981752,
-  "prev_sell": 18.8397968
+  "sell": 19.720844,
+  "buy": 18.8616736,
+  "date": "2022-11-18 12:50:23",
+  "prev_buy": 19.6941272,
+  "prev_sell": 18.8362152
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.8806057,
-  "buy": 18.63279,
-  "date": "2022-11-18 12:40:29",
-  "prev_buy": 19.8733566,
-  "prev_sell": 18.6257082
+  "sell": 19.896227,
+  "buy": 18.6473364,
+  "date": "2022-11-18 12:50:24",
+  "prev_buy": 19.8692726,
+  "prev_sell": 18.6221673
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.8416623,
-  "buy": 19.06113,
-  "date": "2022-11-18 12:40:30",
-  "prev_buy": 19.8344274,
-  "prev_sell": 19.0538854
+  "sell": 19.857253,
+  "buy": 19.0760108,
+  "date": "2022-11-18 12:50:24",
+  "prev_buy": 19.8303514,
+  "prev_sell": 19.0502631
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.9584925,
-  "buy": 18.6912,
-  "date": "2022-11-18 12:40:31",
-  "prev_buy": 19.951215,
-  "prev_sell": 18.684096
+  "sell": 19.974175,
+  "buy": 18.705792,
+  "date": "2022-11-18 12:50:25",
+  "prev_buy": 19.947115,
+  "prev_sell": 18.680544
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.92831137,
-  "buy": 19.012455,
-  "date": "2022-11-18 12:40:31",
-  "prev_buy": 19.92104487,
-  "prev_sell": 19.0052289
+  "sell": 19.94397015,
+  "buy": 19.0272978,
+  "date": "2022-11-18 12:50:26",
+  "prev_buy": 19.91695107,
+  "prev_sell": 19.00161585
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.90981325,
-  "buy": 19.031925,
-  "date": "2022-11-18 12:40:32",
-  "prev_buy": 19.9025535,
-  "prev_sell": 19.0246915
+  "sell": 19.9254575,
+  "buy": 19.046783,
+  "date": "2022-11-18 12:50:26",
+  "prev_buy": 19.8984635,
+  "prev_sell": 19.02107475
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.90981325,
-  "buy": 19.02219,
-  "date": "2022-11-18 12:40:32",
+  "sell": 19.9254575,
+  "buy": 19.0370404,
+  "date": "2022-11-18 12:50:27",
   "prev_buy": 19.9025535,
   "prev_sell": 19.0149602
 },{
