--- a/indexRt.html
+++ b/indexRt.html
@@ -45427,6 +45427,10 @@
     {
       "Date": "2022-11-18 08:00",
       "Rate": "19.4817"
+    },
+    {
+      "Date": "2022-11-18 09:00",
+      "Rate": "19.4895"
     }
   ]
 }
