commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.83280475,
-  "buy": 19.1002,
-  "date": "2022-11-18 13:20:11",
-  "prev_buy": 19.783456,
-  "prev_sell": 19.052474
+  "sell": 19.832703,
+  "buy": 19.099612,
+  "date": "2022-11-18 13:40:10",
+  "prev_buy": 19.79230825,
+  "prev_sell": 19.060804
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.73534625,
-  "buy": 19.197453,
-  "date": "2022-11-18 13:20:13",
-  "prev_buy": 19.68624,
-  "prev_sell": 19.1496805
+  "sell": 19.735245,
+  "buy": 19.197059,
+  "date": "2022-11-18 13:40:12",
+  "prev_buy": 19.69504875,
+  "prev_sell": 19.158053
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.881534,
-  "buy": 19.100004,
-  "date": "2022-11-18 13:20:16",
-  "prev_buy": 19.826658,
-  "prev_sell": 19.04679
+  "sell": 19.881432,
+  "buy": 19.099612,
+  "date": "2022-11-18 13:40:14",
+  "prev_buy": 19.840938,
+  "prev_sell": 19.060804
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9884,
-  "buy": 18.9779,
-  "date": "2022-11-18 13:20:17",
-  "prev_buy": 19.9479,
-  "prev_sell": 18.9374
+  "sell": 19.99,
+  "buy": 18.976,
+  "date": "2022-11-18 13:40:16",
+  "prev_buy": 19.9586,
+  "prev_sell": 18.9481
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.8035672,
-  "buy": 18.993005,
-  "date": "2022-11-18 13:20:22",
-  "prev_buy": 19.7489064,
-  "prev_sell": 18.93989475
+  "sell": 19.8034656,
+  "buy": 18.9924203,
+  "date": "2022-11-18 13:40:21",
+  "prev_buy": 19.7631304,
+  "prev_sell": 18.9538301
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.8425506,
-  "buy": 19.031985,
-  "date": "2022-11-18 13:20:22",
-  "prev_buy": 19.7877822,
-  "prev_sell": 18.97876575
+  "sell": 19.8424488,
+  "buy": 19.0313991,
+  "date": "2022-11-18 13:40:21",
+  "prev_buy": 19.8020342,
+  "prev_sell": 18.9927297
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.85229645,
-  "buy": 18.856575,
-  "date": "2022-11-18 13:20:23",
-  "prev_buy": 19.79750115,
-  "prev_sell": 18.80384625
+  "sell": 19.8521946,
+  "buy": 18.8559945,
+  "date": "2022-11-18 13:40:21",
+  "prev_buy": 19.81176015,
+  "prev_sell": 18.8176815
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.81136388,
-  "buy": 19.053424,
-  "date": "2022-11-18 13:20:24",
-  "prev_buy": 19.75668156,
-  "prev_sell": 19.0001448
+  "sell": 19.81126224,
+  "buy": 19.05283744,
+  "date": "2022-11-18 13:40:22",
+  "prev_buy": 19.77091116,
+  "prev_sell": 19.01412448
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.7256004,
-  "buy": 18.86632,
-  "date": "2022-11-18 13:20:24",
-  "prev_buy": 19.6711548,
-  "prev_sell": 18.813564
+  "sell": 19.7254992,
+  "buy": 18.8657392,
+  "date": "2022-11-18 13:40:23",
+  "prev_buy": 19.6853228,
+  "prev_sell": 18.8274064
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.9010257,
-  "buy": 18.65193,
-  "date": "2022-11-18 13:20:25",
-  "prev_buy": 19.8460959,
-  "prev_sell": 18.5997735
+  "sell": 19.9009236,
+  "buy": 18.6513558,
+  "date": "2022-11-18 13:40:23",
+  "prev_buy": 19.8603899,
+  "prev_sell": 18.6134586
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.8620423,
-  "buy": 19.08071,
-  "date": "2022-11-18 13:20:26",
-  "prev_buy": 19.8072201,
-  "prev_sell": 19.0273545
+  "sell": 19.8619404,
+  "buy": 19.0801226,
+  "date": "2022-11-18 13:40:24",
+  "prev_buy": 19.8214861,
+  "prev_sell": 19.0413542
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.9789925,
-  "buy": 18.7104,
-  "date": "2022-11-18 13:20:26",
-  "prev_buy": 19.9238475,
-  "prev_sell": 18.65808
+  "sell": 19.97889,
+  "buy": 18.709824,
+  "date": "2022-11-18 13:40:24",
+  "prev_buy": 19.9381975,
+  "prev_sell": 18.671808
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.94878037,
-  "buy": 19.031985,
-  "date": "2022-11-18 13:20:27",
-  "prev_buy": 19.89371876,
-  "prev_sell": 18.97876575
+  "sell": 19.94867802,
+  "buy": 19.0313991,
+  "date": "2022-11-18 13:40:25",
+  "prev_buy": 19.90804706,
+  "prev_sell": 18.9927297
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.93026325,
-  "buy": 19.051475,
-  "date": "2022-11-18 13:20:27",
-  "prev_buy": 19.87525275,
-  "prev_sell": 18.99820125
+  "sell": 19.930161,
+  "buy": 19.0508885,
+  "date": "2022-11-18 13:40:25",
+  "prev_buy": 19.882717,
+  "prev_sell": 19.00582575
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.93026325,
-  "buy": 19.04173,
-  "date": "2022-11-18 13:20:27",
-  "prev_buy": 19.87525275,
-  "prev_sell": 18.9884835
+  "sell": 19.930161,
+  "buy": 19.0411438,
+  "date": "2022-11-18 13:40:25",
+  "prev_buy": 19.882717,
+  "prev_sell": 18.9961041
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
