commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45431,6 +45431,10 @@
     {
       "Date": "2022-11-18 09:00",
       "Rate": "19.4895"
+    },
+    {
+      "Date": "2022-11-18 10:00",
+      "Rate": "19.4788"
     }
   ]
 }
