commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45435,6 +45435,10 @@
     {
       "Date": "2022-11-18 10:00",
       "Rate": "19.4788"
+    },
+    {
+      "Date": "2022-11-18 11:00",
+      "Rate": "19.4650"
     }
   ]
 }
