commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45439,6 +45439,10 @@
     {
       "Date": "2022-11-18 11:00",
       "Rate": "19.4650"
+    },
+    {
+      "Date": "2022-11-18 12:00",
+      "Rate": "19.4380"
     }
   ]
 }
