--- a/indexRt.html
+++ b/indexRt.html
@@ -45443,6 +45443,10 @@
     {
       "Date": "2022-11-18 12:00",
       "Rate": "19.4380"
+    },
+    {
+      "Date": "2022-11-18 13:00",
+      "Rate": "19.4424"
     }
   ]
 }
