--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.7791825,
-  "buy": 19.03944,
-  "date": "2022-11-18 17:10:11",
-  "prev_buy": 19.7466225,
-  "prev_sell": 19.012
+  "sell": 19.798515,
+  "buy": 19.04042,
+  "date": "2022-11-18 17:20:11",
+  "prev_buy": 19.7690075,
+  "prev_sell": 19.01396
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.6819875,
-  "buy": 19.13658,
-  "date": "2022-11-18 17:10:14",
-  "prev_buy": 19.6495875,
-  "prev_sell": 19.109
+  "sell": 19.701225,
+  "buy": 19.137565,
+  "date": "2022-11-18 17:20:13",
+  "prev_buy": 19.6718625,
+  "prev_sell": 19.11097
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.82778,
-  "buy": 19.03944,
-  "date": "2022-11-18 17:10:16",
-  "prev_buy": 19.79514,
-  "prev_sell": 19.012
+  "sell": 19.84716,
+  "buy": 19.04042,
+  "date": "2022-11-18 17:20:16",
+  "prev_buy": 19.81758,
+  "prev_sell": 19.01396
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -113,11 +113,11 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9474,
-  "buy": 18.9369,
-  "date": "2022-11-18 17:10:18",
-  "prev_buy": 19.919,
-  "prev_sell": 18.9085
+  "sell": 19.9594,
+  "buy": 18.9489,
+  "date": "2022-11-18 17:20:17",
+  "prev_buy": 19.9183,
+  "prev_sell": 18.9078
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.750024,
-  "buy": 18.932586,
-  "date": "2022-11-18 17:10:22",
-  "prev_buy": 19.717512,
-  "prev_sell": 18.9053
+  "sell": 19.769328,
+  "buy": 18.9335605,
+  "date": "2022-11-18 17:20:21",
+  "prev_buy": 19.739864,
+  "prev_sell": 18.907249
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.788902,
-  "buy": 18.971442,
-  "date": "2022-11-18 17:10:23",
-  "prev_buy": 19.756326,
-  "prev_sell": 18.9441
+  "sell": 19.808244,
+  "buy": 18.9724185,
+  "date": "2022-11-18 17:20:22",
+  "prev_buy": 19.778722,
+  "prev_sell": 18.946053
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.7986215,
-  "buy": 18.79659,
-  "date": "2022-11-18 17:10:24",
-  "prev_buy": 19.7660295,
-  "prev_sell": 18.7695
+  "sell": 19.817973,
+  "buy": 18.7975575,
+  "date": "2022-11-18 17:20:22",
+  "prev_buy": 19.7884365,
+  "prev_sell": 18.771435
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7577996,
-  "buy": 18.9928128,
-  "date": "2022-11-18 17:10:24",
-  "prev_buy": 19.7252748,
-  "prev_sell": 18.96544
+  "sell": 19.7771112,
+  "buy": 18.9937904,
+  "date": "2022-11-18 17:20:23",
+  "prev_buy": 19.7476356,
+  "prev_sell": 18.9673952
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.672268,
-  "buy": 18.806304,
-  "date": "2022-11-18 17:10:25",
-  "prev_buy": 19.639884,
-  "prev_sell": 18.7792
+  "sell": 19.691496,
+  "buy": 18.807272,
+  "date": "2022-11-18 17:20:23",
+  "prev_buy": 19.662148,
+  "prev_sell": 18.781136
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.847219,
-  "buy": 18.592596,
-  "date": "2022-11-18 17:10:25",
-  "prev_buy": 19.814547,
-  "prev_sell": 18.5658
+  "sell": 19.866618,
+  "buy": 18.593553,
+  "date": "2022-11-18 17:20:23",
+  "prev_buy": 19.837009,
+  "prev_sell": 18.567714
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.808341,
-  "buy": 19.020012,
-  "date": "2022-11-18 17:10:25",
-  "prev_buy": 19.775733,
-  "prev_sell": 18.9926
+  "sell": 19.827702,
+  "buy": 19.020991,
+  "date": "2022-11-18 17:20:24",
+  "prev_buy": 19.798151,
+  "prev_sell": 18.994558
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.924975,
-  "buy": 18.65088,
-  "date": "2022-11-18 17:10:26",
-  "prev_buy": 19.892175,
-  "prev_sell": 18.624
+  "sell": 19.94445,
+  "buy": 18.65184,
+  "date": "2022-11-18 17:20:25",
+  "prev_buy": 19.914725,
+  "prev_sell": 18.62592
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.89484455,
-  "buy": 18.971442,
-  "date": "2022-11-18 17:10:27",
+  "sell": 19.9142901,
+  "buy": 18.9724185,
+  "date": "2022-11-18 17:20:25",
   "prev_buy": 19.86209415,
   "prev_sell": 18.9441
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.8763775,
-  "buy": 18.99087,
-  "date": "2022-11-18 17:10:27",
+  "sell": 19.895805,
+  "buy": 18.9918475,
+  "date": "2022-11-18 17:20:26",
   "prev_buy": 19.8436575,
   "prev_sell": 18.9635
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.8763775,
-  "buy": 18.981156,
-  "date": "2022-11-18 17:10:27",
+  "sell": 19.895805,
+  "buy": 18.982133,
+  "date": "2022-11-18 17:20:26",
   "prev_buy": 19.8436575,
   "prev_sell": 18.9538
 },{
