commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45447,6 +45447,10 @@
     {
       "Date": "2022-11-18 13:00",
       "Rate": "19.4424"
+    },
+    {
+      "Date": "2022-11-18 14:00",
+      "Rate": "19.4520"
     }
   ]
 }
