commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45451,6 +45451,10 @@
     {
       "Date": "2022-11-18 14:00",
       "Rate": "19.4520"
+    },
+    {
+      "Date": "2022-11-18 15:00",
+      "Rate": "19.4450"
     }
   ]
 }
