commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45455,6 +45455,10 @@
     {
       "Date": "2022-11-18 15:00",
       "Rate": "19.4450"
+    },
+    {
+      "Date": "2022-11-18 16:00",
+      "Rate": "19.4429"
     }
   ]
 }
