commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45459,6 +45459,10 @@
     {
       "Date": "2022-11-18 16:00",
       "Rate": "19.4429"
+    },
+    {
+      "Date": "2022-11-18 17:00",
+      "Rate": "19.4405"
     }
   ]
 }
