--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -1,19 +1,19 @@
 {"banks":[{
   "bank_id": 1,
   "bank_name": "",
-  "sell": 20,
+  "sell": 20.1,
   "buy": 18.6,
-  "date": "2022-11-17 10:20:09",
+  "date": "2022-11-22 10:40:08",
   "prev_buy": 20,
   "prev_sell": 18.6
 },{
   "bank_id": 2,
   "bank_name": "BANAMEX",
-  "sell": 19.93,
-  "buy": 18.85,
-  "date": "2022-11-18 14:40:09",
-  "prev_buy": 19.87,
-  "prev_sell": 18.8
+  "sell": 20.08,
+  "buy": 18.87,
+  "date": "2022-11-22 10:20:08",
+  "prev_buy": 19.93,
+  "prev_sell": 18.85
 },{
   "bank_id": 3,
   "bank_name": "SANTANDER",
@@ -28,16 +28,16 @@
   "sell": 19.74,
   "buy": 19.01,
   "date": "2022-11-18 12:40:10",
-  "prev_buy": 19.77,
-  "prev_sell": 19.04
+  "prev_buy": 19.74,
+  "prev_sell": 19.01
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.8117425,
-  "buy": 19.04728,
-  "date": "2022-11-18 17:50:11",
-  "prev_buy": 19.7669725,
-  "prev_sell": 19.012
+  "sell": 19.884799,
+  "buy": 19.149592,
+  "date": "2022-11-22 11:10:10",
+  "prev_buy": 19.7686005,
+  "prev_sell": 19.038656
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.7143875,
-  "buy": 19.14446,
-  "date": "2022-11-18 17:50:13",
-  "prev_buy": 19.6698375,
-  "prev_sell": 19.109
+  "sell": 19.787085,
+  "buy": 19.247294,
+  "date": "2022-11-22 11:10:13",
+  "prev_buy": 19.6714575,
+  "prev_sell": 19.135792
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.86042,
-  "buy": 19.04728,
-  "date": "2022-11-18 17:50:15",
-  "prev_buy": 19.81554,
-  "prev_sell": 19.012
+  "sell": 19.9359,
+  "buy": 19.152238,
+  "date": "2022-11-22 11:10:15",
+  "prev_buy": 19.817172,
+  "prev_sell": 19.038656
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-18 20:50:17",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-22 11:10:16",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.963,
-  "buy": 18.935,
-  "date": "2022-11-18 18:10:17",
-  "prev_buy": 19.9139,
-  "prev_sell": 18.901
+  "sell": 20.0588,
+  "buy": 19.0483,
+  "date": "2022-11-22 11:10:17",
+  "prev_buy": 19.9265,
+  "prev_sell": 18.916
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -129,8 +129,8 @@
 },{
   "bank_id": 17,
   "bank_name": "DOF",
-  "sell": " 19.4333",
-  "buy": " 19.4333",
+  "sell": " 19.4930",
+  "buy": " 19.4930",
   "date": "2022-06-03 07:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
@@ -153,105 +153,105 @@
 },{
   "bank_id": 20,
   "bank_name": "SAT",
-  "sell": " 19.4333",
-  "buy": " 19.4333",
-  "date": "2022-11-18 02:10:21",
-  "prev_buy": 19.3137,
-  "prev_sell": 19.3137
+  "sell": " 19.4930",
+  "buy": " 19.4930",
+  "date": "2022-11-22 02:10:19",
+  "prev_buy": 19.4333,
+  "prev_sell": 19.4333
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.782536,
-  "buy": 18.940382,
-  "date": "2022-11-18 17:50:21",
-  "prev_buy": 19.737832,
-  "prev_sell": 18.9053
+  "sell": 19.85772,
+  "buy": 19.04475095,
+  "date": "2022-11-22 11:10:21",
+  "prev_buy": 19.7394576,
+  "prev_sell": 18.9318064
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.821478,
-  "buy": 18.979254,
-  "date": "2022-11-18 17:50:21",
-  "prev_buy": 19.776686,
-  "prev_sell": 18.9441
+  "sell": 19.89681,
+  "buy": 19.08383715,
+  "date": "2022-11-22 11:10:22",
+  "prev_buy": 19.7783148,
+  "prev_sell": 18.9706608
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.8312135,
-  "buy": 18.80433,
-  "date": "2022-11-18 17:50:22",
-  "prev_buy": 19.7863995,
-  "prev_sell": 18.7695
+  "sell": 19.9065825,
+  "buy": 18.90794925,
+  "date": "2022-11-22 11:10:22",
+  "prev_buy": 19.7880291,
+  "prev_sell": 18.795816
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7903244,
-  "buy": 19.0006336,
-  "date": "2022-11-18 17:50:22",
-  "prev_buy": 19.7456028,
-  "prev_sell": 18.96544
+  "sell": 19.865538,
+  "buy": 19.10533456,
+  "date": "2022-11-22 11:10:23",
+  "prev_buy": 19.74722904,
+  "prev_sell": 18.99203072
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.704652,
-  "buy": 18.814048,
-  "date": "2022-11-18 17:50:23",
-  "prev_buy": 19.660124,
-  "prev_sell": 18.7792
+  "sell": 19.77954,
+  "buy": 18.9177208,
+  "date": "2022-11-22 11:10:24",
+  "prev_buy": 19.6617432,
+  "prev_sell": 18.8055296
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.879891,
-  "buy": 18.600252,
-  "date": "2022-11-18 17:50:23",
-  "prev_buy": 19.834967,
-  "prev_sell": 18.5658
+  "sell": 19.955445,
+  "buy": 18.7027467,
+  "date": "2022-11-22 11:10:24",
+  "prev_buy": 19.8366006,
+  "prev_sell": 18.5918304
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.840949,
-  "buy": 19.027844,
-  "date": "2022-11-18 17:50:23",
-  "prev_buy": 19.796113,
-  "prev_sell": 18.9926
+  "sell": 19.916355,
+  "buy": 19.1326949,
+  "date": "2022-11-22 11:10:25",
+  "prev_buy": 19.7977434,
+  "prev_sell": 19.0192288
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.957775,
-  "buy": 18.65856,
-  "date": "2022-11-18 17:50:24",
-  "prev_buy": 19.912675,
-  "prev_sell": 18.624
+  "sell": 20.033625,
+  "buy": 18.761376,
+  "date": "2022-11-22 11:10:25",
+  "prev_buy": 19.914315,
+  "prev_sell": 18.650112
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.92759495,
-  "buy": 18.979254,
-  "date": "2022-11-18 17:50:24",
-  "prev_buy": 19.88256315,
-  "prev_sell": 18.9441
+  "sell": 20.00333025,
+  "buy": 19.08383715,
+  "date": "2022-11-22 11:10:26",
+  "prev_buy": 19.88594054,
+  "prev_sell": 18.9716373
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.9090975,
-  "buy": 18.99869,
-  "date": "2022-11-18 17:50:25",
-  "prev_buy": 19.8641075,
-  "prev_sell": 18.9635
+  "sell": 19.9847625,
+  "buy": 19.10338025,
+  "date": "2022-11-22 11:10:26",
+  "prev_buy": 19.86748175,
+  "prev_sell": 18.9910655
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.9090975,
-  "buy": 18.988972,
-  "date": "2022-11-18 17:50:25",
-  "prev_buy": 19.8641075,
-  "prev_sell": 18.9538
+  "sell": 19.9847625,
+  "buy": 19.0936087,
+  "date": "2022-11-22 11:10:27",
+  "prev_buy": 19.86748175,
+  "prev_sell": 18.9813514
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
-  "sell": 19.7,
-  "buy": 18.3,
-  "date": "2022-11-17 11:10:30",
+  "sell": 19.8,
+  "buy": 18.4,
+  "date": "2022-11-22 11:10:27",
   "prev_buy": 19.7,
   "prev_sell": 18.3
 },{
