--- a/indexRt.html
+++ b/indexRt.html
@@ -45463,6 +45463,10 @@
     {
       "Date": "2022-11-18 17:00",
       "Rate": "19.4405"
+    },
+    {
+      "Date": "2022-11-22 08:00",
+      "Rate": "19.4522"
     }
   ]
 }
