--- a/indexRt.html
+++ b/indexRt.html
@@ -45467,6 +45467,10 @@
     {
       "Date": "2022-11-22 08:00",
       "Rate": "19.4522"
+    },
+    {
+      "Date": "2022-11-22 08:04",
+      "Rate": "19.4522"
     }
   ]
 }
