--- a/indexRt.html
+++ b/indexRt.html
@@ -45471,6 +45471,10 @@
     {
       "Date": "2022-11-22 08:04",
       "Rate": "19.4522"
+    },
+    {
+      "Date": "2022-11-22 09:00",
+      "Rate": "19.4539"
     }
   ]
 }
