--- a/indexRt.html
+++ b/indexRt.html
@@ -45475,6 +45475,10 @@
     {
       "Date": "2022-11-22 09:00",
       "Rate": "19.4539"
+    },
+    {
+      "Date": "2022-11-22 09:04",
+      "Rate": "19.4539"
     }
   ]
 }
