--- a/indexRt.html
+++ b/indexRt.html
@@ -45479,6 +45479,10 @@
     {
       "Date": "2022-11-22 09:04",
       "Rate": "19.4539"
+    },
+    {
+      "Date": "2022-11-22 10:00",
+      "Rate": "19.4371"
     }
   ]
 }
