--- a/indexRt.html
+++ b/indexRt.html
@@ -45483,6 +45483,10 @@
     {
       "Date": "2022-11-22 10:00",
       "Rate": "19.4371"
+    },
+    {
+      "Date": "2022-11-22 10:04",
+      "Rate": "19.4371"
     }
   ]
 }
