commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.784677,
-  "buy": 19.053258,
-  "date": "2022-11-22 14:10:10",
-  "prev_buy": 19.89995975,
-  "prev_sell": 19.164782
+  "sell": 19.778165,
+  "buy": 19.047672,
+  "date": "2022-11-22 14:20:11",
+  "prev_buy": 19.90443675,
+  "prev_sell": 19.167722
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.687455,
-  "buy": 19.1504685,
-  "date": "2022-11-22 14:10:12",
-  "prev_buy": 19.79953875,
-  "prev_sell": 19.259705
+  "sell": 19.67986125,
+  "buy": 19.143081,
+  "date": "2022-11-22 14:20:13",
+  "prev_buy": 19.80662625,
+  "prev_sell": 19.2655165
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.83696,
-  "buy": 19.05022,
-  "date": "2022-11-22 14:00:14",
-  "prev_buy": 19.946202,
-  "prev_sell": 19.16194
+  "sell": 19.825638,
+  "buy": 19.045908,
+  "date": "2022-11-22 14:20:16",
+  "prev_buy": 19.953342,
+  "prev_sell": 19.167722
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.92,
-  "buy": 20.39,
-  "date": "2022-11-22 14:10:16",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-22 14:20:17",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.944,
-  "buy": 18.93,
-  "date": "2022-11-22 14:10:17",
-  "prev_buy": 20.069,
-  "prev_sell": 19.052
+  "sell": 19.9439,
+  "buy": 18.9334,
+  "date": "2022-11-22 14:20:17",
+  "prev_buy": 20.0626,
+  "prev_sell": 19.0521
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -164,94 +164,94 @@
   "sell": 19.7555104,
   "buy": 18.94632645,
   "date": "2022-11-22 14:10:26",
-  "prev_buy": 19.8679816,
-  "prev_sell": 19.0543985
+  "prev_buy": 19.8750936,
+  "prev_sell": 19.06014805
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.798064,
-  "buy": 18.9821835,
-  "date": "2022-11-22 14:00:26",
-  "prev_buy": 19.9070918,
-  "prev_sell": 19.0935045
+  "sell": 19.7867642,
+  "buy": 18.9778869,
+  "date": "2022-11-22 14:20:28",
+  "prev_buy": 19.9142178,
+  "prev_sell": 19.09926585
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.807788,
-  "buy": 18.8072325,
-  "date": "2022-11-22 14:00:26",
-  "prev_buy": 19.91686935,
-  "prev_sell": 18.9175275
+  "sell": 19.79648265,
+  "buy": 18.8029755,
+  "date": "2022-11-22 14:20:28",
+  "prev_buy": 19.92399885,
+  "prev_sell": 18.92323575
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
   "sell": 19.76328816,
   "buy": 19.00659696,
   "date": "2022-11-22 14:10:27",
-  "prev_buy": 19.87580364,
-  "prev_sell": 19.1150128
+  "prev_buy": 19.88291844,
+  "prev_sell": 19.12078064
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.681376,
-  "buy": 18.816952,
-  "date": "2022-11-22 14:00:28",
-  "prev_buy": 19.7897612,
-  "prev_sell": 18.927304
+  "sell": 19.6701428,
+  "buy": 18.8126928,
+  "date": "2022-11-22 14:20:30",
+  "prev_buy": 19.7968452,
+  "prev_sell": 18.9330152
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
   "sell": 19.8527324,
   "buy": 18.6060897,
   "date": "2022-11-22 14:10:29",
-  "prev_buy": 19.9657571,
-  "prev_sell": 18.712221
+  "prev_buy": 19.9729041,
+  "prev_sell": 18.7178673
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
   "sell": 19.8138436,
   "buy": 19.0338159,
   "date": "2022-11-22 14:10:29",
-  "prev_buy": 19.9266469,
-  "prev_sell": 19.142387
+  "prev_buy": 19.9337799,
+  "prev_sell": 19.1481631
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
   "sell": 19.93051,
   "buy": 18.664416,
   "date": "2022-11-22 14:10:30",
-  "prev_buy": 20.0439775,
-  "prev_sell": 18.77088
+  "prev_buy": 20.0511525,
+  "prev_sell": 18.776544
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
   "sell": 19.9040556,
   "buy": 18.9821835,
   "date": "2022-11-22 14:00:30",
-  "prev_buy": 20.0136671,
-  "prev_sell": 19.0935045
+  "prev_buy": 20.02083125,
+  "prev_sell": 19.09926585
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.881899,
-  "buy": 19.00465275,
-  "date": "2022-11-22 14:10:31",
-  "prev_buy": 19.99508975,
-  "prev_sell": 19.1130575
+  "sell": 19.87423025,
+  "buy": 18.9973215,
+  "date": "2022-11-22 14:20:32",
+  "prev_buy": 20.00224725,
+  "prev_sell": 19.11882475
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
   "sell": 19.88558,
   "buy": 18.991903,
   "date": "2022-11-22 14:00:31",
-  "prev_buy": 19.99508975,
-  "prev_sell": 19.103281
+  "prev_buy": 20.00224725,
+  "prev_sell": 19.1090453
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
-  "sell": 19.7,
-  "buy": 18.3,
-  "date": "2022-11-22 14:10:32",
+  "sell": 20.85,
+  "buy": 19.45,
+  "date": "2022-11-22 14:20:33",
   "prev_buy": 19.7,
   "prev_sell": 18.3
 },{
