--- a/indexRt.html
+++ b/indexRt.html
@@ -45487,6 +45487,10 @@
     {
       "Date": "2022-11-22 10:04",
       "Rate": "19.4371"
+    },
+    {
+      "Date": "2022-11-22 11:00",
+      "Rate": "19.4392"
     }
   ]
 }
