commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45491,6 +45491,10 @@
     {
       "Date": "2022-11-22 11:00",
       "Rate": "19.4392"
+    },
+    {
+      "Date": "2022-11-22 11:04",
+      "Rate": "19.4392"
     }
   ]
 }
