--- a/indexRt.html
+++ b/indexRt.html
@@ -45495,6 +45495,10 @@
     {
       "Date": "2022-11-22 11:04",
       "Rate": "19.4392"
+    },
+    {
+      "Date": "2022-11-22 12:00",
+      "Rate": "19.4344"
     }
   ]
 }
