--- a/indexRt.html
+++ b/indexRt.html
@@ -45499,6 +45499,10 @@
     {
       "Date": "2022-11-22 12:00",
       "Rate": "19.4344"
+    },
+    {
+      "Date": "2022-11-22 12:04",
+      "Rate": "19.4344"
     }
   ]
 }
