commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.7791825,
-  "buy": 19.03944,
-  "date": "2022-11-22 16:20:11",
-  "prev_buy": 19.893753,
-  "prev_sell": 19.158216
+  "sell": 19.7812175,
+  "buy": 19.05071,
+  "date": "2022-11-22 16:40:10",
+  "prev_buy": 19.894567,
+  "prev_sell": 19.157726
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -49,9 +49,9 @@
 },{
   "bank_id": 7,
   "bank_name": "IXE",
-  "sell": 19.7,
-  "buy": 18.3,
-  "date": "2022-11-22 16:30:13",
+  "sell": 20.85,
+  "buy": 19.45,
+  "date": "2022-11-22 16:40:11",
   "prev_buy": 19.7,
   "prev_sell": 18.3
 },{
@@ -60,8 +60,8 @@
   "sell": 19.68532875,
   "buy": 19.1484,
   "date": "2022-11-22 16:30:13",
-  "prev_buy": 19.795995,
-  "prev_sell": 19.255962
+  "prev_buy": 19.796805,
+  "prev_sell": 19.2554695
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -92,8 +92,8 @@
   "sell": 19.831146,
   "buy": 19.0512,
   "date": "2022-11-22 16:30:15",
-  "prev_buy": 19.941816,
-  "prev_sell": 19.157334
+  "prev_buy": 19.943448,
+  "prev_sell": 19.157726
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.92,
-  "buy": 20.39,
-  "date": "2022-11-22 16:20:17",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-22 16:40:15",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9453,
-  "buy": 18.9348,
-  "date": "2022-11-22 16:30:17",
-  "prev_buy": 20.0554,
-  "prev_sell": 19.0449
+  "sell": 19.9451,
+  "buy": 18.9346,
+  "date": "2022-11-22 16:40:15",
+  "prev_buy": 20.061,
+  "prev_sell": 19.044
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -164,94 +164,94 @@
   "sell": 19.7533768,
   "buy": 18.94428,
   "date": "2022-11-22 16:30:22",
-  "prev_buy": 19.8636128,
-  "prev_sell": 19.04981835
+  "prev_buy": 19.8652384,
+  "prev_sell": 19.05020815
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
   "sell": 19.7922614,
   "buy": 18.98316,
   "date": "2022-11-22 16:30:23",
-  "prev_buy": 19.9027144,
-  "prev_sell": 19.08891495
+  "prev_buy": 19.9043432,
+  "prev_sell": 19.08930555
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.80198255,
-  "buy": 18.8082,
-  "date": "2022-11-22 16:30:24",
-  "prev_buy": 19.9124898,
-  "prev_sell": 18.91298025
+  "sell": 19.8008622,
+  "buy": 18.807813,
+  "date": "2022-11-22 16:40:21",
+  "prev_buy": 19.9141194,
+  "prev_sell": 18.91336725
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
   "sell": 19.7577996,
   "buy": 18.9928128,
   "date": "2022-11-22 16:20:25",
-  "prev_buy": 19.87143312,
-  "prev_sell": 19.11041808
+  "prev_buy": 19.87305936,
+  "prev_sell": 19.11080912
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
   "sell": 19.6756076,
   "buy": 18.81792,
   "date": "2022-11-22 16:30:25",
-  "prev_buy": 19.7854096,
-  "prev_sell": 18.9227544
+  "prev_buy": 19.7870288,
+  "prev_sell": 18.9231416
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
   "sell": 19.8505883,
   "buy": 18.60408,
   "date": "2022-11-22 16:30:25",
-  "prev_buy": 19.9613668,
-  "prev_sell": 18.7077231
+  "prev_buy": 19.9630004,
+  "prev_sell": 18.7081059
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.8117037,
-  "buy": 19.03176,
-  "date": "2022-11-22 16:30:26",
-  "prev_buy": 19.9222652,
-  "prev_sell": 19.1377857
+  "sell": 19.8105828,
+  "buy": 19.0313684,
+  "date": "2022-11-22 16:40:24",
+  "prev_buy": 19.9238956,
+  "prev_sell": 19.1381773
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.9283575,
-  "buy": 18.6624,
-  "date": "2022-11-22 16:30:26",
-  "prev_buy": 20.03957,
-  "prev_sell": 18.766368
+  "sell": 19.92723,
+  "buy": 18.662016,
+  "date": "2022-11-22 16:40:24",
+  "prev_buy": 20.04121,
+  "prev_sell": 18.766752
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.89822194,
-  "buy": 18.98316,
-  "date": "2022-11-22 16:30:27",
-  "prev_buy": 20.00926626,
-  "prev_sell": 19.08891495
+  "sell": 19.89709614,
+  "buy": 18.9827694,
+  "date": "2022-11-22 16:40:25",
+  "prev_buy": 20.01090378,
+  "prev_sell": 19.08930555
 },{
   "bank_id": 30,
   "bank_name": "VISA",
   "sell": 19.8947825,
   "buy": 19.008465,
   "date": "2022-11-22 16:10:32",
-  "prev_buy": 19.990693,
-  "prev_sell": 19.10846325
+  "prev_buy": 19.992329,
+  "prev_sell": 19.10885425
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.87975175,
-  "buy": 18.99288,
-  "date": "2022-11-22 16:30:28",
+  "sell": 19.878627,
+  "buy": 18.9924892,
+  "date": "2022-11-22 16:40:26",
   "prev_buy": 19.990693,
   "prev_sell": 19.0986891
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
-  "sell": 20.85,
-  "buy": 19.45,
-  "date": "2022-11-22 16:30:29",
+  "sell": 19.7,
+  "buy": 18.3,
+  "date": "2022-11-22 16:40:27",
   "prev_buy": 19.7,
   "prev_sell": 18.3
 },{
