--- a/indexRt.html
+++ b/indexRt.html
@@ -45503,6 +45503,10 @@
     {
       "Date": "2022-11-22 12:04",
       "Rate": "19.4344"
+    },
+    {
+      "Date": "2022-11-22 13:00",
+      "Rate": "19.4182"
     }
   ]
 }
