--- a/indexRt.html
+++ b/indexRt.html
@@ -45507,6 +45507,10 @@
     {
       "Date": "2022-11-22 13:00",
       "Rate": "19.4182"
+    },
+    {
+      "Date": "2022-11-22 13:04",
+      "Rate": "19.4182"
     }
   ]
 }
