--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,9 +33,9 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.782235,
-  "buy": 19.0267,
-  "date": "2022-11-22 17:30:11",
+  "sell": 19.7995325,
+  "buy": 19.05512,
+  "date": "2022-11-22 17:40:11",
   "prev_buy": 19.89263375,
   "prev_sell": 19.156158
 },{
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-22 17:10:17",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-22 17:40:16",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9478,
-  "buy": 18.9373,
-  "date": "2022-11-22 17:30:26",
-  "prev_buy": 20.0514,
-  "prev_sell": 19.0409
+  "sell": 19.947,
+  "buy": 18.93,
+  "date": "2022-11-22 17:40:17",
+  "prev_buy": 20.0493,
+  "prev_sell": 19.0388
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
