--- a/indexRt.html
+++ b/indexRt.html
@@ -45511,6 +45511,10 @@
     {
       "Date": "2022-11-22 13:04",
       "Rate": "19.4182"
+    },
+    {
+      "Date": "2022-11-22 14:00",
+      "Rate": "19.4349"
     }
   ]
 }
