--- a/indexRt.html
+++ b/indexRt.html
@@ -45515,6 +45515,10 @@
     {
       "Date": "2022-11-22 14:00",
       "Rate": "19.4349"
+    },
+    {
+      "Date": "2022-11-22 14:04",
+      "Rate": "19.4349"
     }
   ]
 }
