--- a/indexRt.html
+++ b/indexRt.html
@@ -45519,6 +45519,10 @@
     {
       "Date": "2022-11-22 14:04",
       "Rate": "19.4349"
+    },
+    {
+      "Date": "2022-11-22 15:00",
+      "Rate": "19.4392"
     }
   ]
 }
