commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45523,6 +45523,10 @@
     {
       "Date": "2022-11-22 15:00",
       "Rate": "19.4392"
+    },
+    {
+      "Date": "2022-11-22 15:04",
+      "Rate": "19.4392"
     }
   ]
 }
