--- a/indexRt.html
+++ b/indexRt.html
@@ -45527,6 +45527,10 @@
     {
       "Date": "2022-11-22 15:04",
       "Rate": "19.4392"
+    },
+    {
+      "Date": "2022-11-22 16:00",
+      "Rate": "19.4448"
     }
   ]
 }
