commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45531,6 +45531,10 @@
     {
       "Date": "2022-11-22 16:00",
       "Rate": "19.4448"
+    },
+    {
+      "Date": "2022-11-22 16:04",
+      "Rate": "19.4448"
     }
   ]
 }
