--- a/indexRt.html
+++ b/indexRt.html
@@ -45535,6 +45535,10 @@
     {
       "Date": "2022-11-22 16:04",
       "Rate": "19.4448"
+    },
+    {
+      "Date": "2022-11-22 17:00",
+      "Rate": "19.4278"
     }
   ]
 }
