--- a/indexRt.html
+++ b/indexRt.html
@@ -45539,6 +45539,10 @@
     {
       "Date": "2022-11-22 17:00",
       "Rate": "19.4278"
+    },
+    {
+      "Date": "2022-11-22 17:04",
+      "Rate": "19.4278"
     }
   ]
 }
