--- a/indexRt.html
+++ b/indexRt.html
@@ -45547,6 +45547,10 @@
     {
       "Date": "2022-11-22 18:00",
       "Rate": "19.4280"
+    },
+    {
+      "Date": "2022-11-22 18:04",
+      "Rate": "19.4280"
     }
   ]
 }
