--- a/indexRt.html
+++ b/indexRt.html
@@ -45551,6 +45551,10 @@
     {
       "Date": "2022-11-22 18:04",
       "Rate": "19.4280"
+    },
+    {
+      "Date": "2022-11-22 19:00",
+      "Rate": "19.4311"
     }
   ]
 }
