--- a/indexRt.html
+++ b/indexRt.html
@@ -45555,6 +45555,10 @@
     {
       "Date": "2022-11-22 19:00",
       "Rate": "19.4311"
+    },
+    {
+      "Date": "2022-11-22 19:04",
+      "Rate": "19.4311"
     }
   ]
 }
