--- a/indexRt.html
+++ b/indexRt.html
@@ -45559,6 +45559,10 @@
     {
       "Date": "2022-11-22 19:04",
       "Rate": "19.4311"
+    },
+    {
+      "Date": "2022-11-22 20:00",
+      "Rate": "19.4402"
     }
   ]
 }
