--- a/indexRt.html
+++ b/indexRt.html
@@ -45563,6 +45563,10 @@
     {
       "Date": "2022-11-22 20:00",
       "Rate": "19.4402"
+    },
+    {
+      "Date": "2022-11-22 20:04",
+      "Rate": "19.4402"
     }
   ]
 }
