--- a/indexRt.html
+++ b/indexRt.html
@@ -45567,6 +45567,10 @@
     {
       "Date": "2022-11-22 20:04",
       "Rate": "19.4402"
+    },
+    {
+      "Date": "2022-11-22 21:00",
+      "Rate": "19.4468"
     }
   ]
 }
