--- a/indexRt.html
+++ b/indexRt.html
@@ -45571,6 +45571,10 @@
     {
       "Date": "2022-11-22 21:00",
       "Rate": "19.4468"
+    },
+    {
+      "Date": "2022-11-22 21:04",
+      "Rate": "19.4468"
     }
   ]
 }
