--- a/indexRt.html
+++ b/indexRt.html
@@ -45575,6 +45575,10 @@
     {
       "Date": "2022-11-22 21:04",
       "Rate": "19.4468"
+    },
+    {
+      "Date": "2022-11-22 22:00",
+      "Rate": "19.4332"
     }
   ]
 }
