commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45579,6 +45579,10 @@
     {
       "Date": "2022-11-22 22:00",
       "Rate": "19.4332"
+    },
+    {
+      "Date": "2022-11-22 22:04",
+      "Rate": "19.4332"
     }
   ]
 }
