--- a/indexRt.html
+++ b/indexRt.html
@@ -45583,6 +45583,10 @@
     {
       "Date": "2022-11-22 22:04",
       "Rate": "19.4332"
+    },
+    {
+      "Date": "2022-11-22 23:00",
+      "Rate": "19.4288"
     }
   ]
 }
