--- a/indexRt.html
+++ b/indexRt.html
@@ -45587,6 +45587,10 @@
     {
       "Date": "2022-11-22 23:00",
       "Rate": "19.4288"
+    },
+    {
+      "Date": "2022-11-22 23:04",
+      "Rate": "19.4288"
     }
   ]
 }
