--- a/indexRt.html
+++ b/indexRt.html
@@ -45591,6 +45591,10 @@
     {
       "Date": "2022-11-22 23:04",
       "Rate": "19.4288"
+    },
+    {
+      "Date": "2022-11-23 00:00",
+      "Rate": "19.4175"
     }
   ]
 }
