commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45595,6 +45595,10 @@
     {
       "Date": "2022-11-23 00:00",
       "Rate": "19.4175"
+    },
+    {
+      "Date": "2022-11-23 00:04",
+      "Rate": "19.4175"
     }
   ]
 }
