commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45603,6 +45603,10 @@
     {
       "Date": "2022-11-23 01:00",
       "Rate": "19.4323"
+    },
+    {
+      "Date": "2022-11-23 01:04",
+      "Rate": "19.4323"
     }
   ]
 }
