commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45607,6 +45607,10 @@
     {
       "Date": "2022-11-23 01:04",
       "Rate": "19.4323"
+    },
+    {
+      "Date": "2022-11-23 02:00",
+      "Rate": "19.4292"
     }
   ]
 }
