--- a/indexRt.html
+++ b/indexRt.html
@@ -45611,6 +45611,10 @@
     {
       "Date": "2022-11-23 02:00",
       "Rate": "19.4292"
+    },
+    {
+      "Date": "2022-11-23 02:04",
+      "Rate": "19.4292"
     }
   ]
 }
