commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45615,6 +45615,10 @@
     {
       "Date": "2022-11-23 02:04",
       "Rate": "19.4292"
+    },
+    {
+      "Date": "2022-11-23 03:00",
+      "Rate": "19.4167"
     }
   ]
 }
