--- a/indexRt.html
+++ b/indexRt.html
@@ -45619,6 +45619,10 @@
     {
       "Date": "2022-11-23 03:00",
       "Rate": "19.4167"
+    },
+    {
+      "Date": "2022-11-23 03:04",
+      "Rate": "19.4167"
     }
   ]
 }
