commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45623,6 +45623,10 @@
     {
       "Date": "2022-11-23 03:04",
       "Rate": "19.4167"
+    },
+    {
+      "Date": "2022-11-23 04:00",
+      "Rate": "19.4240"
     }
   ]
 }
