commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45627,6 +45627,10 @@
     {
       "Date": "2022-11-23 04:00",
       "Rate": "19.4240"
+    },
+    {
+      "Date": "2022-11-23 04:04",
+      "Rate": "19.4240"
     }
   ]
 }
