--- a/indexRt.html
+++ b/indexRt.html
@@ -45631,6 +45631,10 @@
     {
       "Date": "2022-11-23 04:04",
       "Rate": "19.4240"
+    },
+    {
+      "Date": "2022-11-23 05:00",
+      "Rate": "19.3835"
     }
   ]
 }
