commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45635,6 +45635,10 @@
     {
       "Date": "2022-11-23 05:00",
       "Rate": "19.3835"
+    },
+    {
+      "Date": "2022-11-23 05:04",
+      "Rate": "19.3835"
     }
   ]
 }
