commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45639,6 +45639,10 @@
     {
       "Date": "2022-11-23 05:04",
       "Rate": "19.3835"
+    },
+    {
+      "Date": "2022-11-23 06:00",
+      "Rate": "19.3634"
     }
   ]
 }
