--- a/indexRt.html
+++ b/indexRt.html
@@ -45643,6 +45643,10 @@
     {
       "Date": "2022-11-23 06:00",
       "Rate": "19.3634"
+    },
+    {
+      "Date": "2022-11-23 06:04",
+      "Rate": "19.3634"
     }
   ]
 }
