commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45647,6 +45647,10 @@
     {
       "Date": "2022-11-23 06:04",
       "Rate": "19.3634"
+    },
+    {
+      "Date": "2022-11-23 07:00",
+      "Rate": "19.3490"
     }
   ]
 }
