--- a/indexRt.html
+++ b/indexRt.html
@@ -45651,6 +45651,10 @@
     {
       "Date": "2022-11-23 07:00",
       "Rate": "19.3490"
+    },
+    {
+      "Date": "2022-11-23 07:04",
+      "Rate": "19.3490"
     }
   ]
 }
