--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -36,8 +36,8 @@
   "sell": 19.68424975,
   "buy": 18.956728,
   "date": "2022-11-23 11:10:10",
-  "prev_buy": 19.884799,
-  "prev_sell": 19.149592
+  "prev_buy": 19.8898865,
+  "prev_sell": 19.154688
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -52,16 +52,16 @@
   "sell": 19.6,
   "buy": 18.2,
   "date": "2022-11-23 11:00:12",
-  "prev_buy": 19.7,
-  "prev_sell": 18.3
+  "prev_buy": 19.8,
+  "prev_sell": 18.4
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.58752125,
-  "buy": 19.053446,
-  "date": "2022-11-23 11:10:13",
-  "prev_buy": 19.787085,
-  "prev_sell": 19.247294
+  "sell": 19.608075,
+  "buy": 19.06369,
+  "date": "2022-11-23 11:20:14",
+  "prev_buy": 19.7921475,
+  "prev_sell": 19.252416
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.732614,
-  "buy": 18.956728,
-  "date": "2022-11-23 11:10:15",
-  "prev_buy": 19.9359,
-  "prev_sell": 19.152238
+  "sell": 19.75332,
+  "buy": 18.96692,
+  "date": "2022-11-23 11:20:16",
+  "prev_buy": 19.938756,
+  "prev_sell": 19.154688
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-23 11:10:16",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.92,
+  "buy": 20.39,
+  "date": "2022-11-23 11:20:17",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.86,
-  "buy": 18.838,
-  "date": "2022-11-23 11:10:17",
-  "prev_buy": 20.0588,
-  "prev_sell": 19.0483
+  "sell": 19.8703,
+  "buy": 18.8598,
+  "date": "2022-11-23 11:20:18",
+  "prev_buy": 20.0455,
+  "prev_sell": 19.035
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -137,9 +137,9 @@
 },{
   "bank_id": 18,
   "bank_name": "INBURSA",
-  "sell": 20.1,
-  "buy": 19.1,
-  "date": "2022-11-22 11:20:30",
+  "sell": 20,
+  "buy": 19,
+  "date": "2022-11-23 11:20:20",
   "prev_buy": 20,
   "prev_sell": 19
 },{
@@ -161,9 +161,9 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6552312,
-  "buy": 18.8503382,
-  "date": "2022-11-23 11:10:21",
+  "sell": 19.675856,
+  "buy": 18.860473,
+  "date": "2022-11-23 11:20:22",
   "prev_buy": 19.85772,
   "prev_sell": 19.04475095
 },{
@@ -185,65 +185,65 @@
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.66296948,
-  "buy": 18.91030336,
-  "date": "2022-11-23 11:10:23",
+  "sell": 19.6836024,
+  "buy": 18.9204704,
+  "date": "2022-11-23 11:20:24",
   "prev_buy": 19.865538,
   "prev_sell": 19.10533456
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.5778484,
-  "buy": 18.7246048,
-  "date": "2022-11-23 11:10:24",
+  "sell": 19.598392,
+  "buy": 18.734672,
+  "date": "2022-11-23 11:20:24",
   "prev_buy": 19.77954,
   "prev_sell": 18.9177208
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7519597,
-  "buy": 18.5118252,
-  "date": "2022-11-23 11:10:24",
+  "sell": 19.772686,
+  "buy": 18.521778,
+  "date": "2022-11-23 11:20:25",
   "prev_buy": 19.955445,
   "prev_sell": 18.7027467
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7132683,
-  "buy": 18.9373844,
-  "date": "2022-11-23 11:10:24",
+  "sell": 19.733954,
+  "buy": 18.947566,
+  "date": "2022-11-23 11:20:25",
   "prev_buy": 19.916355,
   "prev_sell": 19.1326949
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.8293425,
-  "buy": 18.569856,
-  "date": "2022-11-23 11:10:25",
+  "sell": 19.85015,
+  "buy": 18.57984,
+  "date": "2022-11-23 11:20:26",
   "prev_buy": 20.033625,
   "prev_sell": 18.761376
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.79935667,
-  "buy": 18.8890254,
-  "date": "2022-11-23 11:10:25",
+  "sell": 19.8201327,
+  "buy": 18.899181,
+  "date": "2022-11-23 11:20:26",
   "prev_buy": 20.00333025,
   "prev_sell": 19.08383715
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.78097825,
-  "buy": 18.908369,
-  "date": "2022-11-23 11:10:26",
+  "sell": 19.801735,
+  "buy": 18.918535,
+  "date": "2022-11-23 11:20:27",
   "prev_buy": 19.9847625,
   "prev_sell": 19.10338025
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.78097825,
-  "buy": 18.8986972,
-  "date": "2022-11-23 11:10:27",
+  "sell": 19.801735,
+  "buy": 18.908858,
+  "date": "2022-11-23 11:20:27",
   "prev_buy": 19.9847625,
   "prev_sell": 19.0936087
 },{
