commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45655,6 +45655,10 @@
     {
       "Date": "2022-11-23 07:04",
       "Rate": "19.3490"
+    },
+    {
+      "Date": "2022-11-23 08:00",
+      "Rate": "19.3673"
     }
   ]
 }
