commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45659,6 +45659,10 @@
     {
       "Date": "2022-11-23 08:00",
       "Rate": "19.3673"
+    },
+    {
+      "Date": "2022-11-23 09:00",
+      "Rate": "19.3751"
     }
   ]
 }
