commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45663,6 +45663,10 @@
     {
       "Date": "2022-11-23 09:00",
       "Rate": "19.3751"
+    },
+    {
+      "Date": "2022-11-23 10:00",
+      "Rate": "19.3608"
     }
   ]
 }
