commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.713452,
-  "buy": 18.984952,
-  "date": "2022-11-23 14:00:10",
-  "prev_buy": 19.784677,
-  "prev_sell": 19.053258
+  "sell": 19.701242,
+  "buy": 18.973192,
+  "date": "2022-11-23 14:20:11",
+  "prev_buy": 19.778165,
+  "prev_sell": 19.047672
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -49,19 +49,19 @@
 },{
   "bank_id": 7,
   "bank_name": "IXE",
-  "sell": 20.85,
-  "buy": 19.45,
-  "date": "2022-11-23 14:10:12",
+  "sell": 19.6,
+  "buy": 18.2,
+  "date": "2022-11-23 14:20:13",
   "prev_buy": 19.8,
   "prev_sell": 18.4
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.60372125,
-  "buy": 19.0689105,
-  "date": "2022-11-23 14:10:13",
-  "prev_buy": 19.687455,
-  "prev_sell": 19.1504685
+  "sell": 19.61060625,
+  "buy": 19.075707,
+  "date": "2022-11-23 14:20:13",
+  "prev_buy": 19.67986125,
+  "prev_sell": 19.143081
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.748934,
-  "buy": 18.972114,
-  "date": "2022-11-23 14:10:16",
-  "prev_buy": 19.83696,
-  "prev_sell": 19.05022
+  "sell": 19.75587,
+  "buy": 18.978876,
+  "date": "2022-11-23 14:20:15",
+  "prev_buy": 19.825638,
+  "prev_sell": 19.045908
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-23 14:10:16",
-  "prev_buy": 20.92,
-  "prev_sell": 20.39
+  "sell": 20.92,
+  "buy": 20.39,
+  "date": "2022-11-23 14:20:16",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8664,
-  "buy": 18.8559,
-  "date": "2022-11-23 14:10:17",
-  "prev_buy": 19.944,
-  "prev_sell": 18.93
+  "sell": 19.878,
+  "buy": 18.8675,
+  "date": "2022-11-23 14:20:17",
+  "prev_buy": 19.9439,
+  "prev_sell": 18.9334
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,41 +161,41 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.6714872,
-  "buy": 18.86563785,
-  "date": "2022-11-23 14:10:22",
+  "sell": 19.678396,
+  "buy": 18.8723619,
+  "date": "2022-11-23 14:20:22",
   "prev_buy": 19.7555104,
   "prev_sell": 18.94632645
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.7102106,
-  "buy": 18.90435645,
-  "date": "2022-11-23 14:10:22",
-  "prev_buy": 19.798064,
-  "prev_sell": 18.9821835
+  "sell": 19.717133,
+  "buy": 18.9110943,
+  "date": "2022-11-23 14:20:22",
+  "prev_buy": 19.7867642,
+  "prev_sell": 18.9778869
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
   "sell": 19.7318079,
   "buy": 18.7410555,
   "date": "2022-11-23 14:00:21",
-  "prev_buy": 19.807788,
-  "prev_sell": 18.8072325
+  "prev_buy": 19.79648265,
+  "prev_sell": 18.8029755
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.67923188,
-  "buy": 18.92565168,
-  "date": "2022-11-23 14:10:23",
+  "sell": 19.6861434,
+  "buy": 18.93239712,
+  "date": "2022-11-23 14:20:23",
   "prev_buy": 19.76328816,
   "prev_sell": 19.00659696
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.6138756,
-  "buy": 18.7585816,
-  "date": "2022-11-23 13:50:25",
+  "sell": 19.600922,
+  "buy": 18.7464816,
+  "date": "2022-11-23 14:20:24",
   "prev_buy": 19.681376,
   "prev_sell": 18.816952
 },{
@@ -204,56 +204,56 @@
   "sell": 19.7802414,
   "buy": 18.5376642,
   "date": "2022-11-23 14:00:23",
-  "prev_buy": 19.856408,
-  "prev_sell": 18.603123
+  "prev_buy": 19.8527324,
+  "prev_sell": 18.6060897
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7295723,
-  "buy": 18.9527547,
-  "date": "2022-11-23 14:10:25",
-  "prev_buy": 19.817512,
-  "prev_sell": 19.030781
+  "sell": 19.7365015,
+  "buy": 18.9595098,
+  "date": "2022-11-23 14:20:25",
+  "prev_buy": 19.8138436,
+  "prev_sell": 19.0338159
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.8457425,
-  "buy": 18.584928,
-  "date": "2022-11-23 14:10:25",
-  "prev_buy": 19.9342,
-  "prev_sell": 18.66144
+  "sell": 19.8527125,
+  "buy": 18.591552,
+  "date": "2022-11-23 14:20:26",
+  "prev_buy": 19.93051,
+  "prev_sell": 18.664416
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.81573187,
-  "buy": 18.90435645,
-  "date": "2022-11-23 14:10:26",
+  "sell": 19.82269133,
+  "buy": 18.9110943,
+  "date": "2022-11-23 14:20:26",
   "prev_buy": 19.9040556,
   "prev_sell": 18.9821835
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.79733825,
-  "buy": 18.92371575,
-  "date": "2022-11-23 14:10:26",
-  "prev_buy": 19.88558,
-  "prev_sell": 19.0016225
+  "sell": 19.80429125,
+  "buy": 18.9304605,
+  "date": "2022-11-23 14:20:27",
+  "prev_buy": 19.881899,
+  "prev_sell": 19.00465275
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.79733825,
-  "buy": 18.9140361,
-  "date": "2022-11-23 14:10:26",
+  "sell": 19.80429125,
+  "buy": 18.9207774,
+  "date": "2022-11-23 14:20:27",
   "prev_buy": 19.88558,
   "prev_sell": 18.991903
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
-  "sell": 20.85,
-  "buy": 19.45,
-  "date": "2022-11-23 14:00:27",
-  "prev_buy": 19.8,
-  "prev_sell": 18.4
+  "sell": 19.6,
+  "buy": 18.2,
+  "date": "2022-11-23 14:20:28",
+  "prev_buy": 19.7,
+  "prev_sell": 18.3
 },{
   "bank_id": 33,
   "bank_name": "",
