commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45667,6 +45667,10 @@
     {
       "Date": "2022-11-23 10:00",
       "Rate": "19.3608"
+    },
+    {
+      "Date": "2022-11-23 11:00",
+      "Rate": "19.3694"
     }
   ]
 }
