commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45671,6 +45671,10 @@
     {
       "Date": "2022-11-23 11:00",
       "Rate": "19.3694"
+    },
+    {
+      "Date": "2022-11-23 12:00",
+      "Rate": "19.3541"
     }
   ]
 }
