--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.70032625,
-  "buy": 18.971036,
-  "date": "2022-11-23 16:20:10",
-  "prev_buy": 19.7791825,
-  "prev_sell": 19.03944
+  "sell": 19.6994105,
+  "buy": 18.97133,
+  "date": "2022-11-23 16:40:11",
+  "prev_buy": 19.7812175,
+  "prev_sell": 19.05071
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.60351875,
-  "buy": 19.067827,
-  "date": "2022-11-23 16:20:13",
-  "prev_buy": 19.7002125,
-  "prev_sell": 19.15431
+  "sell": 19.6026075,
+  "buy": 19.0681225,
+  "date": "2022-11-23 16:40:13",
+  "prev_buy": 19.68532875,
+  "prev_sell": 19.1484
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.74873,
-  "buy": 18.971036,
-  "date": "2022-11-23 16:20:15",
-  "prev_buy": 19.82778,
-  "prev_sell": 19.03944
+  "sell": 19.747812,
+  "buy": 18.97133,
+  "date": "2022-11-23 16:40:15",
+  "prev_buy": 19.831146,
+  "prev_sell": 19.0512
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -107,17 +107,17 @@
   "bank_name": "MONEX",
   "sell": 20.33,
   "buy": 19.81,
-  "date": "2022-11-23 16:20:16",
-  "prev_buy": 20.92,
-  "prev_sell": 20.39
+  "date": "2022-11-23 16:40:16",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.8671,
-  "buy": 18.8566,
-  "date": "2022-11-23 16:20:16",
-  "prev_buy": 19.9459,
-  "prev_sell": 18.9354
+  "sell": 19.8609,
+  "buy": 18.8504,
+  "date": "2022-11-23 16:40:17",
+  "prev_buy": 19.9451,
+  "prev_sell": 18.9346
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.671284,
-  "buy": 18.8645659,
-  "date": "2022-11-23 16:20:21",
-  "prev_buy": 19.750024,
-  "prev_sell": 18.932586
+  "sell": 19.6703696,
+  "buy": 18.86485825,
+  "date": "2022-11-23 16:40:22",
+  "prev_buy": 19.7533768,
+  "prev_sell": 18.94428
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.710007,
-  "buy": 18.9032823,
-  "date": "2022-11-23 16:20:21",
-  "prev_buy": 19.809262,
-  "prev_sell": 18.987066
+  "sell": 19.7090908,
+  "buy": 18.90357525,
+  "date": "2022-11-23 16:40:22",
+  "prev_buy": 19.7922614,
+  "prev_sell": 18.98316
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.71968775,
-  "buy": 18.7290585,
-  "date": "2022-11-23 16:20:22",
-  "prev_buy": 19.7986215,
-  "prev_sell": 18.79659
+  "sell": 19.7187711,
+  "buy": 18.72934875,
+  "date": "2022-11-23 16:40:23",
+  "prev_buy": 19.8008622,
+  "prev_sell": 18.807813
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.6790286,
-  "buy": 18.92457632,
-  "date": "2022-11-23 16:20:22",
+  "sell": 19.67811384,
+  "buy": 18.9248696,
+  "date": "2022-11-23 16:40:23",
   "prev_buy": 19.7577996,
   "prev_sell": 18.9928128
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.593838,
-  "buy": 18.7387376,
-  "date": "2022-11-23 16:20:23",
-  "prev_buy": 19.672268,
-  "prev_sell": 18.806304
+  "sell": 19.5929272,
+  "buy": 18.739028,
+  "date": "2022-11-23 16:40:24",
+  "prev_buy": 19.6756076,
+  "prev_sell": 18.81792
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.7680915,
-  "buy": 18.5257974,
-  "date": "2022-11-23 16:20:23",
-  "prev_buy": 19.847219,
-  "prev_sell": 18.592596
+  "sell": 19.7671726,
+  "buy": 18.5260845,
+  "date": "2022-11-23 16:40:25",
+  "prev_buy": 19.8505883,
+  "prev_sell": 18.60408
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.7293685,
-  "buy": 18.9516778,
-  "date": "2022-11-23 16:20:24",
-  "prev_buy": 19.808341,
-  "prev_sell": 19.020012
+  "sell": 19.7284514,
+  "buy": 18.9519715,
+  "date": "2022-11-23 16:40:25",
+  "prev_buy": 19.8105828,
+  "prev_sell": 19.0313684
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.8455375,
-  "buy": 18.583872,
-  "date": "2022-11-23 16:20:24",
-  "prev_buy": 19.924975,
-  "prev_sell": 18.65088
+  "sell": 19.844615,
+  "buy": 18.58416,
+  "date": "2022-11-23 16:40:26",
+  "prev_buy": 19.92723,
+  "prev_sell": 18.662016
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.81552718,
-  "buy": 18.9032823,
-  "date": "2022-11-23 16:20:25",
-  "prev_buy": 19.91326665,
-  "prev_sell": 18.989019
+  "sell": 19.81460607,
+  "buy": 18.90357525,
+  "date": "2022-11-23 16:40:27",
+  "prev_buy": 19.89709614,
+  "prev_sell": 18.9827694
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.79713375,
-  "buy": 18.9226405,
-  "date": "2022-11-23 16:20:26",
+  "sell": 19.7962135,
+  "buy": 18.92293375,
+  "date": "2022-11-23 16:40:27",
   "prev_buy": 19.8947825,
   "prev_sell": 19.008465
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.79713375,
-  "buy": 18.9129614,
-  "date": "2022-11-23 16:20:26",
-  "prev_buy": 19.8947825,
-  "prev_sell": 18.998742
+  "sell": 19.7962135,
+  "buy": 18.9132545,
+  "date": "2022-11-23 16:40:28",
+  "prev_buy": 19.878627,
+  "prev_sell": 18.9924892
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
