commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45675,6 +45675,10 @@
     {
       "Date": "2022-11-23 12:00",
       "Rate": "19.3541"
+    },
+    {
+      "Date": "2022-11-23 13:00",
+      "Rate": "19.3527"
     }
   ]
 }
