--- a/indexRt.html
+++ b/indexRt.html
@@ -45679,6 +45679,10 @@
     {
       "Date": "2022-11-23 13:00",
       "Rate": "19.3527"
+    },
+    {
+      "Date": "2022-11-23 14:00",
+      "Rate": "19.3574"
     }
   ]
 }
