--- a/indexRt.html
+++ b/indexRt.html
@@ -45683,6 +45683,10 @@
     {
       "Date": "2022-11-23 14:00",
       "Rate": "19.3574"
+    },
+    {
+      "Date": "2022-11-23 15:00",
+      "Rate": "19.3610"
     }
   ]
 }
