commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45687,6 +45687,10 @@
     {
       "Date": "2022-11-23 15:00",
       "Rate": "19.3610"
+    },
+    {
+      "Date": "2022-11-23 16:00",
+      "Rate": "19.3536"
     }
   ]
 }
