commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -45691,6 +45691,10 @@
     {
       "Date": "2022-11-23 16:00",
       "Rate": "19.3536"
+    },
+    {
+      "Date": "2022-11-23 17:00",
+      "Rate": "19.3556"
     }
   ]
 }
